Update Header Menu & Try Fixing Google OAuth

--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "ternakin",
+    "platforms": ["ios", "android", "web"],
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -47,6 +48,17 @@
       "eas": {
         "projectId": "your-project-id"
       }
+    },
+    "hooks": {
+      "postPublish": [
+        {
+          "file": "sentry-expo/upload-sourcemaps",
+          "config": {
+            "organization": "your-sentry-org",
+            "project": "your-sentry-project"
+          }
+        }
+      ]
     }
   }
 }
