--- a/app.json
+++ b/app.json
@@ -6,7 +6,11 @@
     "orientation": "portrait",
     "icon": "./assets/images/ternakin-logo.png",
     "scheme": "ternakin",
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -19,7 +23,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.ternakin.app"
+      "package": "com.ternakin.app",
+      "versionCode": 1
     },
     "web": {
       "bundler": "metro",
@@ -46,7 +51,7 @@
         "origin": false
       },
       "eas": {
-        "projectId": "your-project-id"
+        "projectId": "f616167d-5581-4529-840b-61320b4e54d4"
       }
     },
     "hooks": {
@@ -59,6 +64,7 @@
           }
         }
       ]
-    }
+    },
+    "owner": "falhadiansyah"
   }
 }
