--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "3.19.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^4.11.2",
-    "react-native-svg": "^15.12.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "^13.15.0",
