--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@supabase/supabase-js": "^2.53.1",
+    "ajv": "6.12.6",
     "expo": "~53.0.20",
     "expo-auth-session": "^6.2.1",
     "expo-blur": "~14.1.5",
