--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "ternakin",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/ternakin-logo.png",
+    "icon": "./assets/images/icon.png",
     "scheme": "ternakin",
     "platforms": [
       "ios",
@@ -19,7 +19,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/ternakin-logo.png",
+        "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
@@ -29,14 +29,14 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/ternakin-logo.png"
+      "favicon": "./assets/images/icon.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/ternakin-logo.png",
+          "image": "./assets/images/icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
